# rsdb

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  config.example.toml  config.worker.example.toml
.github/workflows/: rust.yml
crates/rsdb-catalog/: Cargo.toml
crates/rsdb-catalog/src/: in_memory.rs  lib.rs  stats.rs  traits.rs
crates/rsdb-common/: Cargo.toml  build.rs
crates/rsdb-common/proto/: rsdb_rpc.proto
crates/rsdb-common/src/: client_pool.rs  config.rs  error.rs  lib.rs  rpc.rs  types.rs
crates/rsdb-coordinator/: Cargo.toml
crates/rsdb-coordinator/src/: cluster_state.rs  control_server.rs  coordinator.rs  flight_server.rs  lib.rs  scheduler.rs  tpcds_test.rs
crates/rsdb-coordinator/tests/: distributed_join_agg_test.rs  e2e_distributed_test.rs  multi_worker_test.rs  w2w_shuffle_test.rs
crates/rsdb-executor/: Cargo.toml
crates/rsdb-executor/src/: context.rs  convert.rs  engine.rs  lib.rs  tpcds.rs  tpch.rs
crates/rsdb-executor/src/physical_plan/: mod.rs  shuffle_reader.rs
crates/rsdb-executor/tests/: e2e_test.rs  tpcds_all_test.rs  tpcds_cbo_test.rs  tpcds_stats_test.rs  tpcds_test.rs  tpch_plan_test.rs  tpch_test.rs
crates/rsdb-network/: Cargo.toml
crates/rsdb-network/src/: codec.rs  lib.rs
crates/rsdb-planner/: Cargo.toml
crates/rsdb-planner/src/: cascades.rs  cbo.rs  fragment_planner.rs  lib.rs  memo.rs  optimizer.rs  predicate_pushdown.rs  property.rs  stats_collector.rs  stats_derivation.rs  substrait_consumer.rs  substrait_producer.rs
crates/rsdb-server/: Cargo.toml
crates/rsdb-server/src/: lib.rs  main.rs  mysql_server.rs
crates/rsdb-sql/: Cargo.toml
crates/rsdb-sql/src/: expr.rs  lib.rs  logical_plan.rs  parser.rs  planner.rs
crates/rsdb-storage/: Cargo.toml
crates/rsdb-storage/src/: engine.rs  lib.rs  partitioner.rs
crates/rsdb-worker/: Cargo.toml
crates/rsdb-worker/src/: flight_server.rs  lib.rs  result_manager.rs  rpc_server.rs  task_runner.rs  worker.rs
scripts/: flight_client.py  gen_tpcds_data.py  gen_tpch_queries.py  generate_tpcds.py  generate_tpcds_v2.py  generate_tpch.py  import_tpcds.sh  run_tpcds_queries.py  validate_tpcds_queries.py
tests/: integration_test.rs  tpcds_test.rs
