[package]
name = "rsdb-common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
datafusion = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
