[package]
name = "rsdb-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
rsdb-common = { path = "../rsdb-common" }
rsdb-catalog = { path = "../rsdb-catalog" }

sqlparser = { workspace = true }
arrow-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
