[package]
name = "rsdb-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
rsdb-common = { path = "../rsdb-common" }
rsdb-catalog = { path = "../rsdb-catalog" }
rsdb-sql = { path = "../rsdb-sql" }
rsdb-planner = { path = "../rsdb-planner" }
rsdb-executor = { path = "../rsdb-executor" }
rsdb-storage = { path = "../rsdb-storage" }
rsdb-network = { path = "../rsdb-network" }

arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
arrow-flight = { workspace = true }
datafusion = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
datafusion-substrait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
